<resources>
    <string name="app_name">IT智博会</string>
    <string name="load_error_try_again">重新加载</string>
    <string name="loading">正在加载...</string>
    <string name="no_login">未登录</string>
    <string name="my_msg">我的消息</string>
    <string name="my_blogs">我的博客</string>
    <string name="my_team">我的团队</string>
    <string name="my_event">我的活动</string>
    <string name="my_set">设置</string>
    <string name="login">登录</string>
    <string name="pwd">密码</string>
    <string name="acount_email">邮箱/用户名</string>
    <string name="title">标题</string>
    <string name="content">内容正在赶来的路上</string>
    <string name="time">时间</string>
    <string name="message">信息</string>
    <string name="new_ecommended">最新推荐</string>
    <string name="this_wearher_hot">本周热门</string>
    <string name="new_recommended">最新推荐</string>
    <string name="newest">最新博客</string>
    <string name="question">提问</string>
    <string name="share">分享</string>
    <string name="Synthesize">综合</string>
    <string name="job">职业</string>
    <string name="office">站务</string>
    <string name="integrl">积分</string>
    <string name="collect">收藏</string>
    <string name="attention">关注</string>
    <string name="fans">粉丝</string>

    <string name="jointime">加入时间: %s</string>
    <string name="from">所在地区: %s</string>
    <string name="devplatform">开发平台: %s</string>
    <string name="zhuanchang">专长领域: %s</string>
    <string name="sign_out">注销账号</string>
    <string name="photograph">拍照</string>
    <string name="look_photo_head">查看大头像</string>
    <string name="photo_picture">相册</string>
    <string name="save">保存</string>
    <string name="send_twee">发送到动弹</string>
    <string name="copy_link">复制图片链接</string>

    <string name="qr_code_tip">扫一扫上面的二维码，加我为好友</string>
    <string name="qr_code_tip2">(长按保存到本地)</string>


    <string name="permissions_camera_error">相机无法完成初始化,请正确授权。</string>
    <string name="str_request_camera_message">请求获取相机权限</string>
    <string name="tanyitan">弹一弹</string>
    <string name="send">发送</string>
    <string name="qq_emoji">QQ表情</string>
    <string name="emoji">Emoji表情</string>
    <string name="action">活动</string>
    <string name="nameing">正在报名</string>
    <string name="loss_detail">详情丢失</string>
    <string name="commend">  发表评论:</string>


    <string name="from_web">网页</string>
    <string name="from_mobile">手机</string>
    <string name="from_android">Android</string>
    <string name="from_iphone">iPhone</string>
    <string name="from_windows_phone">Windows Phone</string>
    <string name="from_wechat">微信</string>
    <string name="it_more">IT智博会</string>
</resources>
