<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    >

    <LinearLayout

        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageItemConsult"
            android:layout_marginTop="8dp"
            android:layout_width="100dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/consult_title"
            android:text="@string/title"
            android:textSize="16sp"
            android:textColor="#414040"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:background="@drawable/rect_round"
                android:text="@string/nameing"
                android:textSize="10sp"
                android:layout_marginTop="4dp"
                android:textColor="#58d963"
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/consult_content"
                android:background="@drawable/rect_round2"
                android:layout_marginLeft="5dp"
                android:text="@string/action"
                android:textSize="10sp"
                android:layout_marginTop="4dp"
                android:textColor="#878585"
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <RelativeLayout
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/consult_time"
                android:text="@string/time"
                android:textSize="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/consult_message"
                android:text="@string/message"
                android:textSize="12dp"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
        <View
            android:id="@+id/view"
            android:background="#e1e1e1"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </LinearLayout>

</LinearLayout>