<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageItemConsult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/consult_title"
            android:text="@string/title"
            android:textSize="20sp"
            android:textColor="#414040"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/consult_content"
            android:text="@string/content"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:textColor="#878585"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/consult_time"
                android:text="@string/time"
                android:textSize="12dp"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/consult_message"
                android:text="@string/message"
                android:textSize="12dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
        <View
            android:id="@+id/view"
            android:background="#e1e1e1"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </LinearLayout>

</LinearLayout>