<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    >

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_marginTop="20dp"
            android:background="@drawable/circle"
            android:id="@+id/imageItemConsult"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/consult_title"
            android:text="@string/title"
            android:textSize="16sp"
            android:textColor="#414040"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/consult_content"
            android:text="@string/content"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            android:textColor="#878585"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/consult_time"
                android:text="@string/time"
                android:textSize="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentRight="true">
                <TextView
                    android:id="@+id/consult_message_image1"
                    android:textSize="12dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:background="@mipmap/ic_view"
                    android:layout_width="15dp"
                    android:layout_height="12dp" />

                <TextView
                    android:id="@+id/consult_message1"
                    android:text="@string/message"
                    android:textSize="12dp"
                    android:layout_marginRight="7dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/consult_message_image2"
                    android:textSize="12dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:background="@mipmap/ic_comment_30"
                    android:layout_width="15dp"
                    android:layout_height="12dp" />

                <TextView
                    android:id="@+id/consult_message2"
                    android:text="@string/message"
                    android:textSize="12dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </RelativeLayout>
        <View
            android:id="@+id/view"
            android:background="#e1e1e1"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </LinearLayout>

</LinearLayout>