<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.itheima.openchina.anim.MineTitleCircle
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/normal_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/login_head"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@mipmap/widget_dface"
                app:civ_border_color="@color/white"
                app:civ_border_width="3dp" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/normal_padding"
                android:text="@string/no_login"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal_size" />

            <ImageView
                android:id="@+id/iv_qrcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_qr_code" />
        </LinearLayout>
    </com.itheima.openchina.anim.MineTitleCircle>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/me_tab_bg"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/me_tab_bg"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_integral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/integrl"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/me_tab_bg"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collect"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/me_tab_bg"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_attention"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attention"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/me_tab_bg"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_fans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fans"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small_size" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>